# YDLidar-SDK

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  setup.py  ydlidar_config.h.in
cmake/: install_package.cmake  script_show_final_summary.cmake
cmake/common/: ydlidar_base.cmake  ydlidar_parse.cmake
core/: CMakeLists.txt
core/base/: CMakeLists.txt  datatype.h  locker.h  thread.h  timer.cpp  timer.h  typedef.h  v8stdint.h  ydlidar.h
core/common/: CMakeLists.txt  ChannelDevice.h  DriverInterface.h  YdDataStream.cpp  YdDataStream.h  ydlidar_datatype.h  ydlidar_def.cpp  ydlidar_def.h  ydlidar_help.h  ydlidar_protocol.h
core/json/: CMakeLists.txt
core/math/: CMakeLists.txt  angles.h
core/network/: ActiveSocket.cpp  ActiveSocket.h  CMakeLists.txt  PassiveSocket.cpp  PassiveSocket.h  SimpleSocket.cpp  SimpleSocket.h  StatTimer.h
core/serial/: CMakeLists.txt  common.h  serial.cpp  serial.h
core/serial/impl/: CMakeLists.txt
core/serial/impl/unix/: CMakeLists.txt  list_ports_linux.cpp  list_ports_macos.cpp  lock.c  unix_serial.cpp  unix_serial.h
core/serial/impl/windows/: CMakeLists.txt  list_ports_win.cpp  win_serial.cpp  win_serial.h
csharp/: CMakeLists.txt  ydlidar_sdk.i
csharp/examples/: CMakeLists.txt  Program.cs
doc/: Dataset.md  Diagram.md  README.md  Tutorials.md  YDLIDAR_SDK_API_for_Developers.md  YDLidar-SDK-Communication-Protocol.html  YDLidar-SDK-Communication-Protocol.md
doc/FAQs/: General_FAQs.md  General_FAQs_cn.md  Hardware_FAQs.md  Hardware_FAQs_cn.md  README.md  Software_FAQs.md  Software_FAQs_cn.md
doc/howto/: README.md  how_to_build_and_debug_using_vscode.md  how_to_build_and_install.md  how_to_create_a_csharp_project.md  how_to_create_a_pull.md  how_to_create_a_udev_rules.md  how_to_gerenrate_vs_project_by_cmake.md
doc/quickstart/: README.md  ydlidar_sdk_software_installation_guide.md
doc/tutorials/: examine_the_simple_lidar_tutorial.md  writing_lidar_network_adapter_tutorial_c++.md  writing_lidar_tutorial_c++.md  writing_lidar_tutorial_c.md  writing_lidar_tutorial_python.md
examples/: CMakeLists.txt  dts_test.cpp  et_test.cpp  gs_ota.cpp  gs_restart.cpp  gs_test.cpp  gs_test2.cpp  lidar_c_api_test.c  scl_test.cpp  sdm18_test.cpp  sdm_test.cpp  tea_test.cpp  tia_test.cpp  tmini-sh_test.cpp  tmini_test.cpp  tof_test.cpp  tri_and_gs_test.cpp  tri_restart.cpp  tri_test.cpp
examples/data/: lidar0.csv  lidar1.csv  lidar2.csv
python/: CMakeLists.txt  ydlidar_sdk.i
python/examples/: CMakeLists.txt  etlidar_test.py  gs_test.py  plot_tof_test.py  plot_ydlidar_test.py  tea_test.py  test.py  tminiplus_test.py  tof_test.py  tri_test.py  ydlidar_test.py
python/test/: pytest.py
samples/: CMakeLists.txt  etlidar_test.cpp  gs_test.cpp  lidar_c_api_test.c  scl_test.cpp  sdm_test.cpp  tea_test.cpp  tmini_test.cpp  tof_test.cpp  tri_and_gs_test.cpp  tri_restart.cpp  tri_test.cpp  ydlidar_test.cpp
src/: CMakeLists.txt  CYdLidar.cpp  CYdLidar.h  DTSLidarDriver.cpp  DTSLidarDriver.h  ETLidarDriver.cpp  ETLidarDriver.h  GS1LidarDriver.cpp  GS1LidarDriver.h  GS2LidarDriver.cpp  GS2LidarDriver.h  GSLidarDriver.cpp  GSLidarDriver.h  SDMLidarDriver.cpp  SDMLidarDriver.h  TiaLidarDriver.cpp  TiaLidarDriver.h  YDlidarDriver.cpp  YDlidarDriver.h  ydlidar_driver.cpp  ydlidar_driver.h  ydlidar_sdk.cpp  ydlidar_sdk.h
src/filters/: FilterInterface.h  NoiseFilter.cpp  NoiseFilter.h  StrongLightFilter.cpp  StrongLightFilter.h
test/: CMakeLists.txt  lidar_test.cpp  lidar_test.h
